--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "jest": {
     "testEnvironment": "jsdom",
     "collectCoverageFrom": [
-      "script.js"
+      "script.module.js"
     ],
     "coverageThreshold": {
       "global": {
