--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed"
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -27,9 +24,7 @@
   },
   "homepage": "https://github.com/hideyuki-ogawa/prompt-maker#readme",
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
     "@types/jest": "^29.5.12",
-    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   },
